# haskell-gtk-flake

./: README.md  example.cabal  flake.nix  hickory.cabal
app/: Draw.hs
examples/perlin/: Draw.hs  README.md
src/: Draw.hs  Main.hs
src/Draw/: Color.hs  Noise.hs  Path.hs  Shape.hs
