cabal-version:   3.0
name:            example
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    other-modules:    Draw, Draw.Shape, Draw.Color, Draw.Path, Draw.Noise
    build-depends:    base >= 4 && < 5,
                      text,
                      hsnoise,
                      gi-cairo,
                      gi-gdk,
                      gi-glib,
                      gi-gtk,
                      gi-cairo-render,
                      gi-cairo-connector
    hs-source-dirs:   src, src/Draw, app
    default-language: Haskell2010
