cabal-version:       3.0
name:                hickory
version:             0.1.0
license:             MIT
author:              D. Sunshine
maintainer:          david@sunshines.org
build-type:          Simple
extra-source-files:  README.md

common warnings
    ghc-options: -Wall  -Werror=incomplete-patterns -Wno-simplifiable-class-constraints

flag all
    default: False

executable hickory
    import:           warnings
    buildable:        True
    main-is:          Main.hs
    other-modules:    Draw, Draw.Shape, Draw.Color, Draw.Path, Draw.Noise
    build-depends:    base >= 4 && < 5,
                      text,
                      hsnoise,
                      random,
                      gi-cairo,
                      gi-gdk,
                      gi-glib,
                      gi-gtk,
                      gi-cairo-render,
                      gi-cairo-connector
    hs-source-dirs:   src, src/Draw, app
    default-extensions: FlexibleContexts
    other-extensions:   UnicodeSyntax
    default-language: Haskell2010

executable example-perlin
    import:           warnings
    if flag(all)
        buildable:    True
    else
        buildable:    False
    main-is:          Main.hs
    other-modules:    Draw, Draw.Shape, Draw.Color, Draw.Path, Draw.Noise
    build-depends:    base >= 4 && < 5,
                      text,
                      hsnoise,
                      gi-cairo,
                      gi-gdk,
                      gi-glib,
                      gi-gtk,
                      gi-cairo-render,
                      gi-cairo-connector
    hs-source-dirs:   src, src/Draw, examples/perlin
    default-language: Haskell2010
