cabal-version:       3.0
name:                hickory
version:             0.1.0
license:             MIT
author:              D. Sunshine
maintainer:          david@sunshines.org
build-type:          Simple
extra-source-files:  README.md

common shared-properties
    ghc-options:        -Wall  -Werror=incomplete-patterns -Wno-simplifiable-class-constraints
    other-modules:      Draw, Draw.Shape, Draw.Color, Draw.Path, Draw.Noise
    build-depends:      base >= 4 && < 5,
                        text,
                        hsnoise,
                        random,
                        gi-cairo,
                        gi-gdk,
                        gi-glib,
                        gi-gtk,
                        gi-cairo-render,
                        gi-cairo-connector
    default-extensions: FlexibleContexts
    other-extensions:   UnicodeSyntax
    default-language:   Haskell2010

flag all
    default: False

executable hickory
    import:           shared-properties
    buildable:        True
    main-is:          Main.hs
    hs-source-dirs:   src, src/Draw, app

executable example-perlin
    import:           shared-properties
    if flag(all)
        buildable:    True
    else
        buildable:    False
    main-is:          Main.hs
    hs-source-dirs:   src, src/Draw, examples/perlin

executable example-random-circles
    import:           shared-properties
    if flag(all)
        buildable:    True
    else
        buildable:    False
    main-is:          Main.hs
    hs-source-dirs:   src, src/Draw, examples/random-circles
